# stancppblank

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindStan.cmake  FindTBB.cmake
src/: main.cpp
